# HiveMind-core

./: .gitignore  AUDIT.md  CHANGELOG.md  COMMERCIAL-TERMS.md  FAQ.md  HIVEMIND-ADDITIONAL-TERMS.md  LICENSE  MAINTENANCE_REPORT.md  QUICK_FACTS.md  README.md  SUGGESTIONS.md  TRADEMARK-USAGE.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-tests.yml  build_tests.yml  conventional-label.yaml  conventional-label.yml  coverage.yml  dev2master.yml  license-check.yml  license_check.yml  lint.yml  pip-audit.yml  pip_audit.yml  publish_alpha.yml  publish_stable.yml  python-support.yml  release-preview.yml  release_workflow.yml  repo-health.yml  test.yml  tests.yml  unit_tests.yml
docs/: TODO.md  architecture.md  auth.md  cli.md  configuration.md  ecosystem.md  hive_map.md  index.md  information-flow.md  installation.md  plugin_development.md  plugins.md  protocol.md  query-cascade.md  security.md  whitepaper.md
examples/: add_keys.py  fakecroft.py  mycroft_discover.py  mycroft_master.py  mycroft_slave.py
examples/testmind/broadcast/: end.py  end2.py  end3.py  master.py  mid.py  mid2.py
examples/testmind/escalate/: end.py  end2.py  end3.py  master.py  mid.py  mid2.py
hivemind_core/: __init__.py  __main__.py  agents.py  config.py  database.py  hive_map.py  protocol.py  scripts.py  server.py  service.py  version.py
hivemind_core/admin/: __init__.py  __main__.py  acl_config.json  api.py  persona.json  plugins_config.json  version.py
hivemind_core/admin/static/: index.html
hivemind_core/admin/static/css/: style.css
hivemind_core/admin/static/js/: app.js
jarbas_hive_mind/: __init__.py  __main__.py  exceptions.py  interface.py  message.py  settings.py  version.py
jarbas_hive_mind/backends/: __init__.py  asyncio_loop.py  base.py  twisted_reactor.py
jarbas_hive_mind/configuration/: __init__.py
jarbas_hive_mind/database/: __init__.py  __main__.py  json_db.py  sql_db.py
jarbas_hive_mind/discovery/: __init__.py  ssdp.py  upnp_server.py  zero.py
jarbas_hive_mind/master/: __init__.py
jarbas_hive_mind/nodes/: __init__.py  fakecroft.py  master.py  slave.py  terminal.py
jarbas_hive_mind/slave/: __init__.py  terminal.py
jarbas_hive_mind/utils/: __init__.py  emulation.py
resources/: readme.md
scripts/: bump_alpha.py  bump_build.py  bump_major.py  bump_minor.py  remove_alpha.py
test/: license_tests.py
test/frontend/: acl.test.js  auth.test.js  clients.test.js  personas.test.js
test/frontend/helpers/: setup.js
test/unittests/: test_bus.py  test_database.py  test_db.py  test_hive_map.py  test_protocol.py  test_protocol_coverage.py  test_service.py  test_session_pipeline.py
tests/e2e/: conftest.py  test_acl.py  test_handshake.py  test_message_routing.py
